clusters/rpi/truenas-proxy/immich.yml
apiVersion: v1
kind: Service
metadata:
  name: immich-external
spec:
  ports:
  - name: immich
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: immich-external
subsets:
- addresses:
  - ip: 192.168.88.25
  ports:
  - name: immich
    port: 30041
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: immich-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: truenas-proxy/ca-secret
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_http_version 1.1;
      proxy_set_header   Upgrade    $http_upgrade;
      proxy_set_header   Connection "upgrade";
      proxy_redirect     off;

      proxy_read_timeout 600s;
      proxy_send_timeout 600s;
      send_timeout       600s;
spec:
  ingressClassName: external-nginx
  tls:
  - hosts:
    - immich.mgsds.com
    secretName: immich.mgsds.com-tls
  rules:
  - host: immich.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-external
            port:
              number: 80
