clusters/rpi/truenas-proxy/minio.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-external
spec:
  ports:
  - name: minio
    port: 80
    protocol: TCP
    targetPort: 9002
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-external
subsets:
- addresses:
  - ip: 192.168.88.25
  ports:
  - name: minio
    port: 9002
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: minio-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: minio-webui.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-external
            port:
              number: 80
