clusters/rpi/truenas-proxy/nextcloud.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-external
spec:
  ports:
  - name: nextcloud
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud-external
subsets:
- addresses:
  - ip: 192.168.88.25
  ports:
  - name: nextcloud
    port: 30027
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: nextcloud-ingress
  annotations:
  #   nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
  #   nginx.ingress.kubernetes.io/auth-tls-secret: truenas-proxy/ca-secret
  #   nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
  #   nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/server-snippet: |
      client_max_body_size 512M;
      client_body_timeout 300s;
      fastcgi_buffers 64 4K;
      client_body_buffer_size 512k;

      gzip on;
      gzip_vary on;
      gzip_comp_level 4;
      gzip_min_length 256;
      gzip_proxied expired no-cache no-store private no_last_modified no_etag auth;
      gzip_types application/atom+xml text/javascript application/javascript application/json application/ld+json application/manifest+json application/rss+xml application/vnd.geo+json application/vnd.ms-fontobject application/wasm application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/bmp image/svg+xml image/x-icon text/cache-manifest text/css text/plain text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-dom [...]

      location /.well-known/carddav {
        return 301 $scheme://$host/remote.php/dav;
      } 
      
      location /.well-known/caldav {
          return 301 $scheme://$host/remote.php/dav;
      }
      
      location ^~ /.well-known {
          return 301 $scheme://$host/index.php$uri;
      }
spec:
  ingressClassName: external-nginx
  tls:
  - hosts:
    - cloud.mgsds.com
    secretName: cloud.mgsds.com-tls
  rules:
  - host: cloud.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-external
            port:
              number: 80
