clusters/rpi/truenas-proxy/truenas.yml
apiVersion: v1
kind: Service
metadata:
  name: truenas-external
spec:
  ports:
  - name: truenas
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas-external
subsets:
- addresses:
  - ip: 192.168.88.25
  ports:
  - name: truenas
    port: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas-ingress
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: truenas-ingress
spec:
  ingressClassName: internal-nginx
  rules:
  - host: truenas.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: truenas-external
            port:
              number: 80
